--- a/GradientBoosting/HistGradientBoostingClasssifierBestParametersUnderSampling.ipynb
+++ b/GradientBoosting/HistGradientBoostingClasssifierBestParametersUnderSampling.ipynb
@@ -14,22 +14,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['GradientBoosting_GridSearch_RandomOverSampling_Trained100000.joblib']"
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "grid = joblib.load('GradientBoosting_GridSearch_RandomOverSampling_Trained100000.joblib')"
+    "grid = joblib.load('GradientBoosting_GridSearch_RandomUnderSampling.joblib')"
    ]
   },
   {
@@ -38,9 +27,17 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\crist\\AppData\\Local\\Temp\\ipykernel_12568\\3897947433.py:2: DtypeWarning: Columns (5) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  covid_data = pd.read_csv(\"../covid19_clean_data.csv\", index_col=0)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "(6349701, 9)"
+       "(6349701, 11)"
       ]
      },
      "execution_count": 3,
@@ -71,6 +68,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Forzar formateo de categoria_departamento como String\n",
+    "X['categoria_departamento'] = X['categoria_departamento'].astype('str')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Crear datasets de entrenamiento(80%) y validación(20%). \n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "   X, y, test_size=0.2, random_state=42\n",
@@ -79,16 +86,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Pipeline] ...... (step 1 of 3) Processing preprocessor, total=  15.0s\n",
-      "[Pipeline] ...... (step 2 of 3) Processing oversampling, total= 1.0min\n",
-      "[Pipeline] ........ (step 3 of 3) Processing classifier, total=31.2min\n"
+      "[Pipeline] ..... (step 1 of 3) Processing undersampling, total=  32.6s\n",
+      "[Pipeline] ...... (step 2 of 3) Processing preprocessor, total=   0.2s\n",
+      "[Pipeline] ........ (step 3 of 3) Processing classifier, total=   0.9s\n"
      ]
     }
    ],
@@ -99,28 +106,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['GradientBoosting_BestParameters_RandomOverSampling_Trained100000.joblib']"
+       "['GradientBoosting_BestParameters_RandomUnderSampling.joblib']"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# Save pipeline for future use without fitting\n",
-    "joblib.dump(tuned_pipeline, 'GradientBoosting_BestParameters_RandomOverSampling_Trained100000.joblib')"
+    "joblib.dump(tuned_pipeline, 'GradientBoosting_BestParameters_RandomUnderSampling.joblib')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -140,14 +147,14 @@
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "   Fallecido       0.09      0.60      0.16     28487\n",
-      "       Grave       0.00      0.35      0.00        23\n",
-      "        Leve       1.00      0.70      0.82   1241208\n",
-      "    Moderado       0.00      0.35      0.00       223\n",
+      "   Fallecido       0.03      0.92      0.05     28406\n",
+      "       Grave       0.00      0.00      0.00        20\n",
+      "        Leve       0.99      0.03      0.06   1241299\n",
+      "    Moderado       0.00      0.12      0.00       216\n",
       "\n",
-      "    accuracy                           0.70   1269941\n",
-      "   macro avg       0.27      0.50      0.25   1269941\n",
-      "weighted avg       0.97      0.70      0.81   1269941\n",
+      "    accuracy                           0.05   1269941\n",
+      "   macro avg       0.25      0.27      0.03   1269941\n",
+      "weighted avg       0.97      0.05      0.06   1269941\n",
       "\n"
      ]
     }
