RF - Categoría y Población por Departamento

--- a/RandomForest/RandomForestClasssifierBestParametersOverSampling.ipynb
+++ b/RandomForest/RandomForestClasssifierBestParametersOverSampling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,16 +24,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\crist\\AppData\\Local\\Temp\\ipykernel_8736\\3897947433.py:2: DtypeWarning: Columns (5) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  covid_data = pd.read_csv(\"../covid19_clean_data.csv\", index_col=0)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "(6349701, 9)"
+       "(6349701, 11)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -46,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +65,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Forzar formateo de categoria_departamento como String\n",
+    "X['categoria_departamento'] = X['categoria_departamento'].astype('str')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,16 +87,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Pipeline] ...... (step 1 of 3) Processing preprocessor, total=   5.1s\n",
-      "[Pipeline] ...... (step 2 of 3) Processing oversampling, total=  29.4s\n",
-      "[Pipeline] ........ (step 3 of 3) Processing classifier, total=19.7min\n"
+      "[Pipeline] ...... (step 1 of 3) Processing preprocessor, total=  16.3s\n",
+      "[Pipeline] ...... (step 2 of 3) Processing oversampling, total=  56.9s\n",
+      "[Pipeline] ........ (step 3 of 3) Processing classifier, total= 8.7min\n"
      ]
     }
    ],
@@ -89,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +116,7 @@
        "['RandomForest_BestParameters_RandomOverSampling.joblib']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -119,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -140,13 +158,13 @@
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "   Fallecido       0.14      0.65      0.23     28487\n",
-      "       Grave       0.00      0.00      0.00        23\n",
-      "        Leve       0.99      0.88      0.93   1241208\n",
-      "    Moderado       0.00      0.40      0.01       223\n",
+      "   Fallecido       0.14      0.65      0.23     28406\n",
+      "       Grave       0.00      0.00      0.00        20\n",
+      "        Leve       0.99      0.88      0.93   1241299\n",
+      "    Moderado       0.00      0.44      0.01       216\n",
       "\n",
       "    accuracy                           0.88   1269941\n",
-      "   macro avg       0.28      0.48      0.29   1269941\n",
+      "   macro avg       0.28      0.49      0.29   1269941\n",
       "weighted avg       0.97      0.88      0.92   1269941\n",
       "\n"
      ]
