--- a/RandomForest/RandomForestClasssifierBestParametersUnderSampling.ipynb
+++ b/RandomForest/RandomForestClasssifierBestParametersUnderSampling.ipynb
@@ -28,9 +28,17 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\crist\\AppData\\Local\\Temp\\ipykernel_11144\\3897947433.py:2: DtypeWarning: Columns (5) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  covid_data = pd.read_csv(\"../covid19_clean_data.csv\", index_col=0)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "(6349701, 9)"
+       "(6349701, 11)"
       ]
      },
      "execution_count": 3,
@@ -61,6 +69,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Forzar formateo de categoria_departamento como String\n",
+    "X['categoria_departamento'] = X['categoria_departamento'].astype('str')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Crear datasets de entrenamiento(80%) y validación(20%). \n",
     "X_train, X_test, y_train, y_test = train_test_split(\n",
     "   X, y, test_size=0.2, random_state=42\n",
@@ -69,16 +87,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[Pipeline] ..... (step 1 of 3) Processing undersampling, total=  38.9s\n",
-      "[Pipeline] ...... (step 2 of 3) Processing preprocessor, total=   0.2s\n",
-      "[Pipeline] ........ (step 3 of 3) Processing classifier, total=   7.1s\n"
+      "[Pipeline] ..... (step 1 of 3) Processing undersampling, total=  30.7s\n",
+      "[Pipeline] ...... (step 2 of 3) Processing preprocessor, total=   0.3s\n",
+      "[Pipeline] ........ (step 3 of 3) Processing classifier, total=   3.8s\n"
      ]
     }
    ],
@@ -89,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -98,7 +116,7 @@
        "['RandomForest_BestParameters_RandomUnderSampling.joblib']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,7 +128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -140,14 +158,14 @@
       "Classification Report:\n",
       "              precision    recall  f1-score   support\n",
       "\n",
-      "   Fallecido       0.02      1.00      0.05     28487\n",
-      "       Grave       0.00      0.00      0.00        23\n",
-      "        Leve       1.00      0.08      0.15   1241208\n",
-      "    Moderado       0.01      0.39      0.01       223\n",
+      "   Fallecido       0.02      1.00      0.05     28406\n",
+      "       Grave       0.00      0.00      0.00        20\n",
+      "        Leve       1.00      0.08      0.14   1241299\n",
+      "    Moderado       0.01      0.42      0.01       216\n",
       "\n",
       "    accuracy                           0.10   1269941\n",
       "   macro avg       0.26      0.37      0.05   1269941\n",
-      "weighted avg       0.98      0.10      0.15   1269941\n",
+      "weighted avg       0.98      0.10      0.14   1269941\n",
       "\n"
      ]
     },
@@ -164,7 +182,7 @@
     "# Generate classification report\n",
     "report = classification_report(y_test, y_pred)\n",
     "print(\"\\nClassification Report:\")\n",
-    "print(report)\n"
+    "print(report)"
    ]
   }
  ],
