--- a/PreparacionDatos.ipynb
+++ b/PreparacionDatos.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,40 +12,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\crist\\AppData\\Local\\Temp\\ipykernel_3448\\4159600309.py:2: DtypeWarning: Columns (14) have mixed types. Specify dtype option on import or set low_memory=False.\n",
-      "  data = pd.read_csv(\"casos_covid19_colombia.csv\")\n"
+      "C:\\Users\\crist\\AppData\\Local\\Temp\\ipykernel_3848\\226723303.py:2: DtypeWarning: Columns (14) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "  data = pd.read_csv(\"casos_covid19_colombia.csv\")[[\n"
      ]
-    }
-   ],
-   "source": [
-    "# Leer dataset original\n",
-    "data = pd.read_csv(\"casos_covid19_colombia.csv\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
+    },
     {
      "data": {
       "text/plain": [
-       "(6390971, 23)"
+       "(6390971, 9)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# Leer dataset original\n",
+    "data = pd.read_csv(\"casos_covid19_colombia.csv\")[[\n",
+    "    \"ID de caso\",\n",
+    "    \"Nombre departamento\",\n",
+    "    \"Nombre municipio\",\n",
+    "    \"Edad\",\n",
+    "    \"Unidad de medida de edad\",\n",
+    "    \"Sexo\",\n",
+    "    \"Tipo de contagio\",\n",
+    "    \"Estado\",\n",
+    "    \"Fecha de inicio de síntomas\"]]\n",
+    "\n",
     "data.shape"
    ]
   },
@@ -58,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -67,7 +68,7 @@
        "(6390971, 9)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -99,7 +100,7 @@
        "(6349701, 9)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,16 +124,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\crist\\AppData\\Local\\Temp\\ipykernel_3448\\2389459221.py:8: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '[0.5        0.25       0.5        ... 0.91666667 0.5        0.16666667]' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
+      "C:\\Users\\crist\\AppData\\Local\\Temp\\ipykernel_3848\\1790464415.py:8: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '[0.5        0.25       0.5        ... 0.91666667 0.5        0.16666667]' has dtype incompatible with int64, please explicitly cast to a compatible dtype first.\n",
       "  clean_data.loc[clean_data[\"Unidad de medida de edad\"] == 2,\"Edad\"] = clean_data[\"Edad\"]/12.0\n",
-      "C:\\Users\\crist\\AppData\\Local\\Temp\\ipykernel_3448\\2389459221.py:12: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '0 a 4 años' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
+      "C:\\Users\\crist\\AppData\\Local\\Temp\\ipykernel_3848\\1790464415.py:12: FutureWarning: Setting an item of incompatible dtype is deprecated and will raise in a future error of pandas. Value '0 a 4 años' has dtype incompatible with float64, please explicitly cast to a compatible dtype first.\n",
       "  clean_data.loc[clean_data[\"Edad\"] < 5,\"rango_edad\"] = \"0 a 4 años\"\n"
      ]
     }
@@ -140,8 +141,8 @@
    "source": [
     "# Construcción de nuevos datos\n",
     "# Categorización asintomaticos\n",
-    "clean_data.loc[~clean_data[\"Fecha de inicio de síntomas\"].isna(),\"Fecha de inicio de síntomas\"] = 0\n",
-    "clean_data.loc[clean_data[\"Fecha de inicio de síntomas\"].isna(),\"Fecha de inicio de síntomas\"] = 1\n",
+    "clean_data.loc[~clean_data[\"Fecha de inicio de síntomas\"].isna(),\"Fecha de inicio de síntomas\"] = 'No'\n",
+    "clean_data.loc[clean_data[\"Fecha de inicio de síntomas\"].isna(),\"Fecha de inicio de síntomas\"] = 'Si'\n",
     "#clean_data[\"Fecha de inicio de síntomas\"].value_counts()\n",
     "\n",
     "# Modificación de edad basado en la unidad de medida de edad\n",
@@ -159,243 +160,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Integracion de los datos\n",
+    "departamentos = pd.read_csv('departamentos.csv')\n",
+    "municipios = pd.read_csv('municipios.csv')\n",
+    "\n",
+    "#clean_data.merge(municipios, left_on='Nombre municipio', right_on='Homologo')\n",
+    "clean_data = clean_data.merge(departamentos[['Nombre','Población DANE','Categoría','Homologo']], left_on='Nombre departamento', right_on='Homologo')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Formato de datos \n",
-    "# Remover columa de unidad de medida \n",
-    "clean_data = clean_data.drop(columns=[\"Unidad de medida de edad\"])\n",
+    "# Remover columnas innecesarias\n",
+    "clean_data = clean_data.drop(columns=[\"Unidad de medida de edad\",\"Nombre departamento\",\"Homologo\"])\n",
     "# Renombrar columnas a formato camel_case\n",
     "clean_data = clean_data.rename(columns={\n",
     "    \"ID de caso\": \"id_caso\",\n",
-    "    \"Nombre departamento\": \"departamento\",\n",
+    "    \"Nombre\": \"departamento\",\n",
     "    \"Nombre municipio\": \"municipio\",\n",
     "    \"Edad\": \"edad\",\n",
     "    \"Sexo\": \"sexo\",\n",
     "    \"Tipo de contagio\": \"tipo_contagio\",\n",
     "    \"Estado\": \"estado\",\n",
-    "    \"Fecha de inicio de síntomas\":\"asintomatico\"\n",
-    "    })"
+    "    \"Fecha de inicio de síntomas\":\"asintomatico\",\n",
+    "    \"Población DANE\":\"poblacion_departamento\",\n",
+    "    \"Categoría\":\"categoria_departamento\"\n",
+    "    })\n",
+    "\n",
+    "# Formatear categoria de departamento como String\n",
+    "clean_data['categoria_departamento'] = clean_data['categoria_departamento'].astype(str)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>id_caso</th>\n",
-       "      <th>departamento</th>\n",
-       "      <th>municipio</th>\n",
-       "      <th>edad</th>\n",
-       "      <th>sexo</th>\n",
-       "      <th>tipo_contagio</th>\n",
-       "      <th>estado</th>\n",
-       "      <th>asintomatico</th>\n",
-       "      <th>rango_edad</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1556979</td>\n",
-       "      <td>VALLE</td>\n",
-       "      <td>CALI</td>\n",
-       "      <td>67.0</td>\n",
-       "      <td>F</td>\n",
-       "      <td>Comunitaria</td>\n",
-       "      <td>Leve</td>\n",
-       "      <td>0</td>\n",
-       "      <td>65 años y más</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>1556980</td>\n",
-       "      <td>VALLE</td>\n",
-       "      <td>CALI</td>\n",
-       "      <td>66.0</td>\n",
-       "      <td>F</td>\n",
-       "      <td>Comunitaria</td>\n",
-       "      <td>Leve</td>\n",
-       "      <td>0</td>\n",
-       "      <td>65 años y más</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>1556981</td>\n",
-       "      <td>VALLE</td>\n",
-       "      <td>CALI</td>\n",
-       "      <td>68.0</td>\n",
-       "      <td>F</td>\n",
-       "      <td>Comunitaria</td>\n",
-       "      <td>Leve</td>\n",
-       "      <td>0</td>\n",
-       "      <td>65 años y más</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1556982</td>\n",
-       "      <td>VALLE</td>\n",
-       "      <td>CALI</td>\n",
-       "      <td>74.0</td>\n",
-       "      <td>F</td>\n",
-       "      <td>Comunitaria</td>\n",
-       "      <td>Fallecido</td>\n",
-       "      <td>0</td>\n",
-       "      <td>65 años y más</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1556983</td>\n",
-       "      <td>VALLE</td>\n",
-       "      <td>CALI</td>\n",
-       "      <td>65.0</td>\n",
-       "      <td>F</td>\n",
-       "      <td>Comunitaria</td>\n",
-       "      <td>Leve</td>\n",
-       "      <td>0</td>\n",
-       "      <td>65 años y más</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6390966</th>\n",
-       "      <td>4990088</td>\n",
-       "      <td>VALLE</td>\n",
-       "      <td>PALMIRA</td>\n",
-       "      <td>37.0</td>\n",
-       "      <td>M</td>\n",
-       "      <td>Relacionado</td>\n",
-       "      <td>Leve</td>\n",
-       "      <td>0</td>\n",
-       "      <td>26 a 40 años</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6390967</th>\n",
-       "      <td>4990091</td>\n",
-       "      <td>VALLE</td>\n",
-       "      <td>PALMIRA</td>\n",
-       "      <td>36.0</td>\n",
-       "      <td>M</td>\n",
-       "      <td>Comunitaria</td>\n",
-       "      <td>Leve</td>\n",
-       "      <td>0</td>\n",
-       "      <td>26 a 40 años</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6390968</th>\n",
-       "      <td>4990092</td>\n",
-       "      <td>VALLE</td>\n",
-       "      <td>JAMUNDI</td>\n",
-       "      <td>39.0</td>\n",
-       "      <td>F</td>\n",
-       "      <td>Comunitaria</td>\n",
-       "      <td>Leve</td>\n",
-       "      <td>0</td>\n",
-       "      <td>26 a 40 años</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6390969</th>\n",
-       "      <td>4990095</td>\n",
-       "      <td>VALLE</td>\n",
-       "      <td>JAMUNDI</td>\n",
-       "      <td>43.0</td>\n",
-       "      <td>F</td>\n",
-       "      <td>Relacionado</td>\n",
-       "      <td>Leve</td>\n",
-       "      <td>0</td>\n",
-       "      <td>41 a 64 años</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6390970</th>\n",
-       "      <td>4990096</td>\n",
-       "      <td>VALLE</td>\n",
-       "      <td>JAMUNDI</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>M</td>\n",
-       "      <td>Relacionado</td>\n",
-       "      <td>Leve</td>\n",
-       "      <td>0</td>\n",
-       "      <td>12 a 25 años</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>6349701 rows × 9 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "         id_caso departamento municipio  edad sexo tipo_contagio     estado  \\\n",
-       "0        1556979        VALLE      CALI  67.0    F   Comunitaria       Leve   \n",
-       "1        1556980        VALLE      CALI  66.0    F   Comunitaria       Leve   \n",
-       "2        1556981        VALLE      CALI  68.0    F   Comunitaria       Leve   \n",
-       "3        1556982        VALLE      CALI  74.0    F   Comunitaria  Fallecido   \n",
-       "4        1556983        VALLE      CALI  65.0    F   Comunitaria       Leve   \n",
-       "...          ...          ...       ...   ...  ...           ...        ...   \n",
-       "6390966  4990088        VALLE   PALMIRA  37.0    M   Relacionado       Leve   \n",
-       "6390967  4990091        VALLE   PALMIRA  36.0    M   Comunitaria       Leve   \n",
-       "6390968  4990092        VALLE   JAMUNDI  39.0    F   Comunitaria       Leve   \n",
-       "6390969  4990095        VALLE   JAMUNDI  43.0    F   Relacionado       Leve   \n",
-       "6390970  4990096        VALLE   JAMUNDI  16.0    M   Relacionado       Leve   \n",
-       "\n",
-       "        asintomatico     rango_edad  \n",
-       "0                  0  65 años y más  \n",
-       "1                  0  65 años y más  \n",
-       "2                  0  65 años y más  \n",
-       "3                  0  65 años y más  \n",
-       "4                  0  65 años y más  \n",
-       "...              ...            ...  \n",
-       "6390966            0   26 a 40 años  \n",
-       "6390967            0   26 a 40 años  \n",
-       "6390968            0   26 a 40 años  \n",
-       "6390969            0   41 a 64 años  \n",
-       "6390970            0   12 a 25 años  \n",
-       "\n",
-       "[6349701 rows x 9 columns]"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "clean_data"
+    "clean_data = clean_data[['id_caso','departamento','municipio','poblacion_departamento','categoria_departamento','edad','sexo','tipo_contagio','asintomatico','rango_edad','estado']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
